--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.19.0",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^6.1.1"
   },
   "scripts": {
