adding my resume to applicaiton

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
