--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "reflect-metadata": "^0.1.13",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "clean": "rm -rf dist",
