--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       // "incremental": true,                   /* Enable incremental compilation */
       "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
       "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-      // "lib": [],                             /* Specify library files to be included in the compilation. */
+      "lib": ["es6", "dom"],                             /* Specify library files to be included in the compilation. */
       "allowJs": true,                       /* Allow javascript files to be compiled. */
       // "checkJs": true,                       /* Report errors in .js files. */
       "jsx": "react-jsx",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -31,7 +31,7 @@
       // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
       // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
       // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
-      // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
+      "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
       // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
   
       /* Additional Checks */
@@ -68,7 +68,8 @@
       // "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
       "paths": {
         "@src/*": ["./src/*"],
-        "@assets/*": ["./src/assets/*"]
+        "@assets/*": ["./src/assets/*"],
+        "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
       }
     },
     "exclude": [
