--- a/package.json
+++ b/package.json
@@ -42,9 +42,13 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@svgr/webpack": "^8.1.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/react-leaflet": "^3.0.0",
     "formik": "^2.4.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.19.0",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^6.1.1",
