--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
