--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "clean": "rm -rf dist",
     "test": "jest --watchAll",
     "dev": "webpack-dev-server --config webpack/webpack.dev.js",
-    "build": "webpack --config webpack/webpack.prod.js",
-    "start": "npm run clean && webpack serve --open --config webpack/webpack.prod.js"
+    "start": "webpack serve --open --config webpack/webpack.prod.js",
+    "build": "npm run clean && webpack --config webpack/webpack.prod.js",
+    "docker:build":"docker build -t client ." 
   }
 }
